Async kall til Sigrun og Inntektskomponenten (structured concurrency) (#357)
* Async kall til Sigrun og Inntektskomponenten (med structured concurrency)
* Gjør parallelle kall til inntektskomponenten med års-lange perioder
* Flyttet kode, gjorde håndtering av InterruptException mer tydelig